force-app/main/default/objects/Twilio_Details__c/Twilio_Details__c.object-meta.xml
<CustomObject>
    <description>To capture details from Twilio as part of Call and Chat Interaction</description>
    <label>Twilio Detail</label>
    <nameField>
        <displayFormat>TD-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>