force-app/main/default/objects/Twilio_Details__c/fields/ANZ_Queue__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Queue__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>To store the call/chat queue from Twilio side</description>
    <inlineHelpText>The number they called or the message queue they came from to initiate this interaction.</inlineHelpText>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>