force-app/main/default/objects/Twilio_Details__c/fields/Call_Recording_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Id__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Twilio</complianceGroup>
    <description>Used to store the unique call recording ID of the call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Recording Id</label>
    <length>34</length>
    <type>Text</type>
</CustomField>