force-app/main/default/objects/Twilio_Details__c/fields/Call_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Call_Transcript__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>To Capture the transcript data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>