force-app/main/default/objects/Twilio_Details__c/fields/Chat_or_Call_SID__c.field-meta.xml
<CustomField>
    <fullName>Chat_or_Call_SID__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Twilio</complianceGroup>
    <description>Used to store the unique Chat / Call Channel ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for call or message thread</inlineHelpText>
    <label>Contact ID</label>
    <length>34</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>