force-app/main/default/objects/Twilio_Details__c/fields/NLP_Topic__c.field-meta.xml
<CustomField>
    <fullName>NLP_Topic__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Twilio</complianceGroup>
    <description>NLP Topic from Twilio</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the suggested topic the message thread is about based on analysing the messages using our natural language processing (NLP) software</inlineHelpText>
    <label>Customer Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>