force-app/main/default/objects/Twilio_Details__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - Twilio</complianceGroup>
    <description>AI generated Summary from Twilio</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>