force-app/main/default/objects/Twilio_Details__c/fields/Twilio_ID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_ID__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Twilio</complianceGroup>
    <description>Interaction ID for a call or message</description>
    <inlineHelpText>Interaction ID for a call or message</inlineHelpText>
    <label>Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>