force-app/main/default/objects/Twilio_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ANZ_Queue__c</columns>
    <columns>Call_Recording_Id__c</columns>
    <columns>Chat_or_Call_SID__c</columns>
    <columns>Status__c</columns>
    <columns>Twilio_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>